--- a/popup.html
+++ b/popup.html
@@ -13,5 +13,8 @@
   		<div id="helptext">You can search by phone, email, or name</div>
   	</div>
   	<div id="people"></div>
+    <div id="footer">
+      <div id="popup-icon"><img src="images/pop-out-window.png"/></div>
+    </div>
   </div>
 </body>
